added version metadata: 0.1

--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +224,7 @@
     "    'compiler': 'Dirk Roorda',\n",
     "    'source': 'Good Reads',\n",
     "    'url': 'https://www.goodreads.com/work/quotes/14366-consider-phlebas',\n",
+    "    'version': '0.1',\n",
     "}"
    ]
   },
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +531,7 @@
       "   |     0.00s \"node\" actions: 20\n",
       "   |     0.00s \"resume\" actions: 2\n",
       "   |     0.00s \"slot\" actions: 99\n",
-      "   |     0.01s \"terminate\" actions: 27\n",
+      "   |     0.00s \"terminate\" actions: 27\n",
       "   |          1 x \"book\" node \n",
       "   |          2 x \"chapter\" node \n",
       "   |         12 x \"line\" node \n",
@@ -539,9 +540,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |    -0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |     0.00s      2 unlinked nodes\n",
-      "   |      |     0.00s Leaving    117 nodes\n",
+      "   |      |    1m 50s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |    1m 50s      2 unlinked nodes\n",
+      "   |      |    1m 50s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -554,13 +555,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |     0.01s node feature \"author\" with 1 node\n",
-      "   |      |     0.01s node feature \"gap\" with 7 nodes\n",
-      "   |      |     0.01s node feature \"letters\" with 99 nodes\n",
-      "   |      |     0.01s node feature \"number\" with 17 nodes\n",
-      "   |      |     0.01s node feature \"punc\" with 17 nodes\n",
-      "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
-      "   |      |     0.01s node feature \"title\" with 1 node\n",
+      "   |      |    1m 50s node feature \"author\" with 1 node\n",
+      "   |      |    1m 50s node feature \"gap\" with 7 nodes\n",
+      "   |      |    1m 50s node feature \"letters\" with 99 nodes\n",
+      "   |      |    1m 50s node feature \"number\" with 17 nodes\n",
+      "   |      |    1m 50s node feature \"punc\" with 17 nodes\n",
+      "   |      |    1m 50s node feature \"terminator\" with 12 nodes\n",
+      "   |      |    1m 50s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.1:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -586,7 +587,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -630,8 +631,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
+      "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:55:55Z\n",
+      "@dateWritten=2019-04-09T13:57:45Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -656,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +673,9 @@
       "@sectionTypes=book,chapter,sentence\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
+      "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:55:55Z\n",
+      "@dateWritten=2019-04-09T13:57:45Z\n",
       "\n",
       "\n"
      ]
@@ -692,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -705,8 +708,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
+      "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:55:55Z\n",
+      "@dateWritten=2019-04-09T13:57:45Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -756,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -770,8 +774,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=int\n",
+      "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:55:55Z\n",
+      "@dateWritten=2019-04-09T13:57:45Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -824,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -838,8 +843,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
+      "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:55:55Z\n",
+      "@dateWritten=2019-04-09T13:57:45Z\n",
       "\n",
       "Everything\n",
       "about\n",
