--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -119,25 +119,7 @@
       "This is Text-Fabric 7.5.4\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
-      "0 features found and 0 ignored\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0.00s Warp feature \"otype\" not found in\n",
-      "/Users/dirk/github/annotation/banks/tf/0.1/\n",
-      "  0.00s Warp feature \"oslots\" not found in\n",
-      "/Users/dirk/github/annotation/banks/tf/0.1/\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.00s Warp feature \"otext\" not found. Working without Text-API\n",
-      "\n"
+      "10 features found and 0 ignored\n"
      ]
     }
    ],
@@ -165,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +207,7 @@
     "    'source': 'Good Reads',\n",
     "    'url': 'https://www.goodreads.com/work/quotes/14366-consider-phlebas',\n",
     "    'version': '0.1',\n",
+    "    'purpose': 'exposition',\n",
     "}"
    ]
   },
@@ -254,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -540,9 +523,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |    1m 50s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |    1m 50s      2 unlinked nodes\n",
-      "   |      |    1m 50s Leaving    117 nodes\n",
+      "   |      |    -0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |     0.00s      2 unlinked nodes\n",
+      "   |      |     0.00s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -555,13 +538,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |    1m 50s node feature \"author\" with 1 node\n",
-      "   |      |    1m 50s node feature \"gap\" with 7 nodes\n",
-      "   |      |    1m 50s node feature \"letters\" with 99 nodes\n",
-      "   |      |    1m 50s node feature \"number\" with 17 nodes\n",
-      "   |      |    1m 50s node feature \"punc\" with 17 nodes\n",
-      "   |      |    1m 50s node feature \"terminator\" with 12 nodes\n",
-      "   |      |    1m 50s node feature \"title\" with 1 node\n",
+      "   |      |     0.01s node feature \"author\" with 1 node\n",
+      "   |      |     0.01s node feature \"gap\" with 7 nodes\n",
+      "   |      |     0.01s node feature \"letters\" with 99 nodes\n",
+      "   |      |     0.01s node feature \"number\" with 17 nodes\n",
+      "   |      |     0.01s node feature \"punc\" with 17 nodes\n",
+      "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
+      "   |      |     0.01s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.1:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -587,7 +570,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -628,12 +611,13 @@
       "@node\n",
       "@compiler=Dirk Roorda\n",
       "@name=Culture quotes from Iain Banks\n",
+      "@purpose=exposition\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
       "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:57:45Z\n",
+      "@dateWritten=2019-04-09T14:09:56Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -658,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -669,13 +653,14 @@
       "@compiler=Dirk Roorda\n",
       "@fmt:text-orig-full={letters}{punc} \n",
       "@name=Culture quotes from Iain Banks\n",
+      "@purpose=exposition\n",
       "@sectionFeatures=title,number,number\n",
       "@sectionTypes=book,chapter,sentence\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:57:45Z\n",
+      "@dateWritten=2019-04-09T14:09:56Z\n",
       "\n",
       "\n"
      ]
@@ -695,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -705,12 +690,13 @@
       "@edge\n",
       "@compiler=Dirk Roorda\n",
       "@name=Culture quotes from Iain Banks\n",
+      "@purpose=exposition\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
       "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:57:45Z\n",
+      "@dateWritten=2019-04-09T14:09:56Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -760,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -771,12 +757,13 @@
       "@compiler=Dirk Roorda\n",
       "@description=number of chapter, or sentence in chapter, or line in sentence\n",
       "@name=Culture quotes from Iain Banks\n",
+      "@purpose=exposition\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=int\n",
       "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:57:45Z\n",
+      "@dateWritten=2019-04-09T14:09:56Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -829,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -840,12 +827,13 @@
       "@compiler=Dirk Roorda\n",
       "@description=the letters of a word\n",
       "@name=Culture quotes from Iain Banks\n",
+      "@purpose=exposition\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
       "@version=0.1\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T13:57:45Z\n",
+      "@dateWritten=2019-04-09T14:09:56Z\n",
       "\n",
       "Everything\n",
       "about\n",
