--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,25 @@
       "This is Text-Fabric 7.5.4\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
-      "10 features found and 0 ignored\n"
+      "0 features found and 0 ignored\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0.00s Warp feature \"otype\" not found in\n",
+      "/Users/dirk/github/annotation/banks/tf/0.2/\n",
+      "  0.00s Warp feature \"oslots\" not found in\n",
+      "/Users/dirk/github/annotation/banks/tf/0.2/\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.00s Warp feature \"otext\" not found. Working without Text-API\n",
+      "\n"
      ]
     }
    ],
@@ -132,7 +150,7 @@
     "\n",
     "TF_DIR = os.path.expanduser(f'{BASE}/{ORG}/{REPO}/{RELATIVE}')\n",
     "\n",
-    "VERSION = '0.1'\n",
+    "VERSION = '0.2'\n",
     "\n",
     "TF_PATH = f'{TF_DIR}/{VERSION}'\n",
     "TF = Fabric(locations=TF_PATH)"
@@ -147,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +224,7 @@
     "    'compiler': 'Dirk Roorda',\n",
     "    'source': 'Good Reads',\n",
     "    'url': 'https://www.goodreads.com/work/quotes/14366-consider-phlebas',\n",
-    "    'version': '0.1',\n",
+    "    'version': '0.2',\n",
     "    'purpose': 'exposition',\n",
     "}"
    ]
@@ -237,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +541,7 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |    -0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |     0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
       "   |      |     0.00s      2 unlinked nodes\n",
       "   |      |     0.00s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
@@ -546,22 +564,22 @@
       "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
       "   |      |     0.01s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
-      "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.1:\n",
+      "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
       "  0.00s VALIDATING oslots feature\n",
       "  0.00s maxSlot=         99\n",
       "  0.00s maxNode=        117\n",
       "  0.00s OK: oslots is valid\n",
-      "   |     0.00s T author               to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T gap                  to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T letters              to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T number               to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T otype                to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T punc                 to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T terminator           to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T title                to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s T oslots               to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "   |     0.00s M otext                to /Users/dirk/github/annotation/banks/tf/0.1\n",
-      "  0.02s Exported 8 node features and 1 edge features and 1 config features to /Users/dirk/github/annotation/banks/tf/0.1\n"
+      "   |     0.00s T author               to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T gap                  to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T letters              to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T number               to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T otype                to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T punc                 to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T terminator           to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T title                to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T oslots               to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s M otext                to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "  0.02s Exported 8 node features and 1 edge features and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2\n"
      ]
     },
     {
@@ -570,7 +588,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -615,9 +633,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
-      "@version=0.1\n",
+      "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:09:56Z\n",
+      "@dateWritten=2019-04-09T14:11:20Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -642,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -658,9 +676,9 @@
       "@sectionTypes=book,chapter,sentence\n",
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
-      "@version=0.1\n",
+      "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:09:56Z\n",
+      "@dateWritten=2019-04-09T14:11:20Z\n",
       "\n",
       "\n"
      ]
@@ -680,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -694,9 +712,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
-      "@version=0.1\n",
+      "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:09:56Z\n",
+      "@dateWritten=2019-04-09T14:11:20Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -746,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -761,9 +779,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=int\n",
-      "@version=0.1\n",
+      "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:09:56Z\n",
+      "@dateWritten=2019-04-09T14:11:20Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -816,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -831,9 +849,9 @@
       "@source=Good Reads\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
-      "@version=0.1\n",
+      "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:09:56Z\n",
+      "@dateWritten=2019-04-09T14:11:20Z\n",
       "\n",
       "Everything\n",
       "about\n",
