--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,7 @@
     "    'url': 'https://www.goodreads.com/work/quotes/14366-consider-phlebas',\n",
     "    'version': '0.2',\n",
     "    'purpose': 'exposition',\n",
+    "    'status': 'with for similarities in a separate module'\n",
     "}"
    ]
   },
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -541,9 +542,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |     0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |     0.00s      2 unlinked nodes\n",
-      "   |      |     0.00s Leaving    117 nodes\n",
+      "   |      |    2m 54s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |    2m 54s      2 unlinked nodes\n",
+      "   |      |    2m 54s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -556,13 +557,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |     0.01s node feature \"author\" with 1 node\n",
-      "   |      |     0.01s node feature \"gap\" with 7 nodes\n",
-      "   |      |     0.01s node feature \"letters\" with 99 nodes\n",
-      "   |      |     0.01s node feature \"number\" with 17 nodes\n",
-      "   |      |     0.01s node feature \"punc\" with 17 nodes\n",
-      "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
-      "   |      |     0.01s node feature \"title\" with 1 node\n",
+      "   |      |    2m 54s node feature \"author\" with 1 node\n",
+      "   |      |    2m 54s node feature \"gap\" with 7 nodes\n",
+      "   |      |    2m 54s node feature \"letters\" with 99 nodes\n",
+      "   |      |    2m 54s node feature \"number\" with 17 nodes\n",
+      "   |      |    2m 54s node feature \"punc\" with 17 nodes\n",
+      "   |      |    2m 54s node feature \"terminator\" with 12 nodes\n",
+      "   |      |    2m 54s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -588,7 +589,7 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -631,11 +632,12 @@
       "@name=Culture quotes from Iain Banks\n",
       "@purpose=exposition\n",
       "@source=Good Reads\n",
+      "@status=with for similarities in a separate module\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:11:20Z\n",
+      "@dateWritten=2019-04-09T14:14:14Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -660,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -675,10 +677,11 @@
       "@sectionFeatures=title,number,number\n",
       "@sectionTypes=book,chapter,sentence\n",
       "@source=Good Reads\n",
+      "@status=with for similarities in a separate module\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:11:20Z\n",
+      "@dateWritten=2019-04-09T14:14:14Z\n",
       "\n",
       "\n"
      ]
@@ -698,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -710,11 +713,12 @@
       "@name=Culture quotes from Iain Banks\n",
       "@purpose=exposition\n",
       "@source=Good Reads\n",
+      "@status=with for similarities in a separate module\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:11:20Z\n",
+      "@dateWritten=2019-04-09T14:14:14Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -764,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -777,11 +781,12 @@
       "@name=Culture quotes from Iain Banks\n",
       "@purpose=exposition\n",
       "@source=Good Reads\n",
+      "@status=with for similarities in a separate module\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=int\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:11:20Z\n",
+      "@dateWritten=2019-04-09T14:14:14Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -834,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -847,11 +852,12 @@
       "@name=Culture quotes from Iain Banks\n",
       "@purpose=exposition\n",
       "@source=Good Reads\n",
+      "@status=with for similarities in a separate module\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:11:20Z\n",
+      "@dateWritten=2019-04-09T14:14:14Z\n",
       "\n",
       "Everything\n",
       "about\n",
