--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -998,13 +998,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "All chapters:\n",
+    "Tutorial for Banks\n",
     "\n",
-    "* *convert*\n",
-    "* [use](use.ipynb)\n",
-    "* [share](share.ipynb)\n",
-    "* [app](app.ipynb)\n",
-    "* [repo](repo.ipynb)\n",
+    "* [use](https://nbviewer.jupyter.org/github/annotation/tutorials/blob/master/banks/use.ipynb)\n",
     "\n",
     "---"
    ]
