--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,35 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Text-Fabric 7.5.4\n",
+      "This is Text-Fabric 7.6.3\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
-      "0 features found and 0 ignored\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0.00s Warp feature \"otype\" not found in\n",
-      "/Users/dirk/github/annotation/banks/tf/0.2/\n",
-      "  0.00s Warp feature \"oslots\" not found in\n",
-      "/Users/dirk/github/annotation/banks/tf/0.2/\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.00s Warp feature \"otext\" not found. Working without Text-API\n",
-      "\n"
+      "10 features found and 0 ignored\n"
      ]
     }
    ],
@@ -165,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,13 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "intFeatures = {\n",
     "  'number',\n",
-    "  'gap'\n",
+    "  'gap',\n",
     "}"
    ]
   },
@@ -307,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +481,10 @@
     "    \n",
     "  for ntp in ('sentence', 'chapter', 'book'):\n",
     "    cv.terminate(cur[ntp])                        # action\n",
-    "    "
+    "\n",
+    "  cv.meta(\n",
+    "    'punc', remark='a bit more info is needed',\n",
+    "  )                                               # action"
    ]
   },
   {
@@ -513,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -542,9 +527,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |    2m 54s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |    2m 54s      2 unlinked nodes\n",
-      "   |      |    2m 54s Leaving    117 nodes\n",
+      "   |      |    1m 03s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |    1m 03s      2 unlinked nodes\n",
+      "   |      |    1m 03s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -557,13 +542,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |    2m 54s node feature \"author\" with 1 node\n",
-      "   |      |    2m 54s node feature \"gap\" with 7 nodes\n",
-      "   |      |    2m 54s node feature \"letters\" with 99 nodes\n",
-      "   |      |    2m 54s node feature \"number\" with 17 nodes\n",
-      "   |      |    2m 54s node feature \"punc\" with 17 nodes\n",
-      "   |      |    2m 54s node feature \"terminator\" with 12 nodes\n",
-      "   |      |    2m 54s node feature \"title\" with 1 node\n",
+      "   |      |    1m 03s node feature \"author\" with 1 node\n",
+      "   |      |    1m 03s node feature \"gap\" with 7 nodes\n",
+      "   |      |    1m 03s node feature \"letters\" with 99 nodes\n",
+      "   |      |    1m 03s node feature \"number\" with 17 nodes\n",
+      "   |      |    1m 03s node feature \"punc\" with 17 nodes\n",
+      "   |      |    1m 03s node feature \"terminator\" with 12 nodes\n",
+      "   |      |    1m 03s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -589,7 +574,7 @@
        "True"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +622,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:14:14Z\n",
+      "@dateWritten=2019-04-25T13:09:38Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -662,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +666,7 @@
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:14:14Z\n",
+      "@dateWritten=2019-04-25T13:09:38Z\n",
       "\n",
       "\n"
      ]
@@ -701,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +703,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:14:14Z\n",
+      "@dateWritten=2019-04-25T13:09:38Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -768,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +771,7 @@
       "@valueType=int\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:14:14Z\n",
+      "@dateWritten=2019-04-25T13:09:38Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -839,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +842,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-09T14:14:14Z\n",
+      "@dateWritten=2019-04-25T13:09:38Z\n",
       "\n",
       "Everything\n",
       "about\n",
@@ -974,6 +959,69 @@
     "#### Explanation\n",
     "\n",
     "The plain, clean text of everything."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### punc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@node\n",
+      "@compiler=Dirk Roorda\n",
+      "@description=the punctuation after a word\n",
+      "@name=Culture quotes from Iain Banks\n",
+      "@purpose=exposition\n",
+      "@remark=a bit more info is needed\n",
+      "@source=Good Reads\n",
+      "@status=with for similarities in a separate module\n",
+      "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
+      "@valueType=str\n",
+      "@version=0.2\n",
+      "@writtenBy=Text-Fabric\n",
+      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "\n",
+      "3\t,\n",
+      "6\t,\n",
+      "20\t;\n",
+      "24\t,\n",
+      "27\t.\n",
+      "38\t,\n",
+      "45\t,\n",
+      "51\t,\n",
+      "55\t?\n",
+      ",\n",
+      "75\t,\n",
+      "78\t,\n",
+      ",\n",
+      ",\n",
+      "83\t,\n",
+      "88\t,\n",
+      "99\t.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(f'{TF_PATH}/punc.tf') as fh:\n",
+    "  print(fh.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the metadata field `remark=a bit more info is needed` which was added \"last-minute\" by means of a `cv.meta()` action."
    ]
   },
   {
