--- a/programs/structure.ipynb
+++ b/programs/structure.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Text-Fabric 7.7.1\n",
+      "This is Text-Fabric 7.7.2\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
       "10 features found and 0 ignored\n"
@@ -113,17 +113,24 @@
      "output_type": "stream",
      "text": [
       "  0.00s loading features ...\n",
-      "   |     0.00s B otype                from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B oslots               from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B title                from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B number               from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B letters              from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B punc                 from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B terminator           from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T otype                from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T oslots               from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T title                from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T number               from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T letters              from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T punc                 from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T terminator           from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |      |     0.00s C __levels__           from otype, oslots, otext\n",
+      "   |      |     0.00s C __order__            from otype, oslots, __levels__\n",
+      "   |      |     0.00s C __rank__             from otype, __order__\n",
+      "   |      |     0.00s C __levUp__            from otype, oslots, __levels__, __rank__\n",
+      "   |      |     0.00s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.00s C __boundary__         from otype, oslots, __rank__\n",
+      "   |      |     0.00s C __sections__         from otype, oslots, otext, __levUp__, __levels__, title, number, number\n",
       "   |      |     0.00s C __structure__        from otype, oslots, otext, __rank__, __levUp__, title, number, number, number\n",
-      "   |     0.00s B author               from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s B gap                  from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "  0.03s All features loaded/computed - for details use loadLog()\n"
+      "   |     0.00s T author               from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s T gap                  from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "  0.05s All features loaded/computed - for details use loadLog()\n"
      ]
     }
    ],
@@ -163,7 +170,7 @@
        " 'url': 'https://www.goodreads.com/work/quotes/14366-consider-phlebas',\n",
        " 'version': '0.2',\n",
        " 'writtenBy': 'Text-Fabric',\n",
-       " 'dateWritten': '2019-05-12T08:17:42Z'}"
+       " 'dateWritten': '2019-05-13T10:20:06Z'}"
       ]
      },
      "execution_count": 6,
@@ -211,8 +218,8 @@
       "\tT.down(node)                 gives the (immediate) children nodes\n",
       "\tT.headingFromNode(node)      gives the heading of a node\n",
       "\tT.nodeFromHeading(heading)   gives the node of a heading\n",
-      "\tT.ndFromHd                   complete mapping from nodes to headings\n",
-      "\tT.hdFromNd                   complete mapping from headings to nodes\n",
+      "\tT.ndFromHd                   complete mapping from headings to nodes\n",
+      "\tT.hdFromNd                   complete mapping from nodes to headings\n",
       "\tT.hdMult are all headings    with their nodes that occur multiple times\n",
       "\n",
       "There are 18 structural elements in the dataset.\n",
