--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Text-Fabric 7.7.1\n",
+      "This is Text-Fabric 7.7.2\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
       "10 features found and 0 ignored\n"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +225,15 @@
     "\n",
     "#### Section structure\n",
     "\n",
-    "Currently, TF assumes that there are two or three section levels.\n",
-    "For each level you have to specify the corresponding node type and the feature that contains the section name or number.\n",
+    "TF assumes that there are two or three section levels it can work with.\n",
+    "For each level you have to specify the corresponding node type and the feature that contains the section name or number\n",
+    "(`sectionTypes` and `sectionFeatures`).\n",
+    "\n",
+    "#### Your own section structure\n",
+    "\n",
+    "But you can also define a more extensive and flexible section structure for your own purposes\n",
+    "(`structureTypes` and `structureFeatures`).\n",
+    "Both systems may use the same types and features, but they are completely independent.\n",
     "\n",
     "#### Text formats\n",
     "\n",
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +518,15 @@
      "text": [
       "  0.00s Importing data from walking through the source ...\n",
       "   |     0.00s Preparing metadata... \n",
-      "   |   SECTION TYPES:    book, chapter, sentence\n",
-      "   |   SECTION FEATURES: title, number, number\n",
-      "   |   TEXT    FEATURES:\n",
+      "   |   SECTION   TYPES:    book, chapter, sentence\n",
+      "   |   SECTION   FEATURES: title, number, number\n",
+      "   |   STRUCTURE TYPES:    book, chapter, sentence, line\n",
+      "   |   STRUCTURE FEATURES: title, number, number, number\n",
+      "   |   TEXT      FEATURES:\n",
       "   |      |   line-default         letters, terminator\n",
       "   |      |   line-term            terminator\n",
       "   |      |   text-orig-full       letters, punc\n",
-      "   |     0.00s OK\n",
+      "   |     0.01s OK\n",
       "   |     0.00s Following director... \n",
       "   |     0.00s \"edge\" actions: 0\n",
       "   |     0.00s \"feature\" actions: 144\n",
@@ -533,9 +542,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |     0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |     0.00s      2 unlinked nodes\n",
-      "   |      |     0.00s Leaving    117 nodes\n",
+      "   |      |       27s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |       27s      2 unlinked nodes\n",
+      "   |      |       27s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -548,13 +557,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |     0.01s node feature \"author\" with 1 node\n",
-      "   |      |     0.01s node feature \"gap\" with 7 nodes\n",
-      "   |      |     0.01s node feature \"letters\" with 99 nodes\n",
-      "   |      |     0.01s node feature \"number\" with 17 nodes\n",
-      "   |      |     0.01s node feature \"punc\" with 17 nodes\n",
-      "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
-      "   |      |     0.01s node feature \"title\" with 1 node\n",
+      "   |      |       27s node feature \"author\" with 1 node\n",
+      "   |      |       27s node feature \"gap\" with 7 nodes\n",
+      "   |      |       27s node feature \"letters\" with 99 nodes\n",
+      "   |      |       27s node feature \"number\" with 17 nodes\n",
+      "   |      |       27s node feature \"punc\" with 17 nodes\n",
+      "   |      |       27s node feature \"terminator\" with 12 nodes\n",
+      "   |      |       27s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -580,7 +589,7 @@
        "True"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +637,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-11T20:09:01Z\n",
+      "@dateWritten=2019-05-13T10:20:06Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -653,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +685,7 @@
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-11T20:09:01Z\n",
+      "@dateWritten=2019-05-13T10:20:06Z\n",
       "\n",
       "\n"
      ]
@@ -696,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +722,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-11T20:09:01Z\n",
+      "@dateWritten=2019-05-13T10:20:06Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -763,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +790,7 @@
       "@valueType=int\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-11T20:09:01Z\n",
+      "@dateWritten=2019-05-13T10:20:06Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -834,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +861,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-11T20:09:01Z\n",
+      "@dateWritten=2019-05-13T10:20:06Z\n",
       "\n",
       "Everything\n",
       "about\n",
@@ -980,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1008,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-11T20:09:01Z\n",
+      "@dateWritten=2019-05-13T10:20:06Z\n",
       "\n",
       "3\t,\n",
       "6\t,\n",
