--- a/programs/structure.ipynb
+++ b/programs/structure.ipynb
@@ -113,24 +113,16 @@
      "output_type": "stream",
      "text": [
       "  0.00s loading features ...\n",
-      "   |     0.00s T otype                from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T oslots               from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T title                from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T number               from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T letters              from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T punc                 from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T terminator           from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |      |     0.00s C __levels__           from otype, oslots, otext\n",
-      "   |      |     0.00s C __order__            from otype, oslots, __levels__\n",
-      "   |      |     0.00s C __rank__             from otype, __order__\n",
-      "   |      |     0.00s C __levUp__            from otype, oslots, __levels__, __rank__\n",
-      "   |      |     0.00s C __levDown__          from otype, __levUp__, __rank__\n",
-      "   |      |     0.00s C __boundary__         from otype, oslots, __rank__\n",
-      "   |      |     0.00s C __sections__         from otype, oslots, otext, __levUp__, __levels__, title, number, number\n",
-      "   |      |     0.00s C __structure__        from otype, oslots, otext, __rank__, __levUp__, title, number, number, number\n",
-      "   |     0.00s T author               from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T gap                  from /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "  0.05s All features loaded/computed - for details use loadLog()\n"
+      "   |     0.00s B otype                from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B oslots               from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B title                from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B number               from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B letters              from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B punc                 from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B terminator           from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B author               from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.00s B gap                  from /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "  0.03s All features loaded/computed - for details use loadLog()\n"
      ]
     }
    ],
