--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,26 +103,14 @@
    "metadata": {},
    "source": [
     "We call up TF and let it look into the directory where the output has to land,\n",
-    "in this case a subdirectory of the tutorials repo on annotation.\n",
-    "It will not like what it sees, but that is not our concern."
+    "in this case a subdirectory of the tutorials repo on annotation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is Text-Fabric 7.7.5\n",
-      "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
-      "\n",
-      "10 features found and 0 ignored\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TF_DIR = os.path.expanduser('~/Downloads/banks/tf')  # if you want it in your Downloads directory instead\n",
     "BASE = os.path.expanduser('~/github')\n",
@@ -135,7 +123,7 @@
     "VERSION = '0.2'\n",
     "\n",
     "TF_PATH = f'{TF_DIR}/{VERSION}'\n",
-    "TF = Fabric(locations=TF_PATH)"
+    "TF = Fabric(locations=TF_PATH, silent=True)"
    ]
   },
   {
@@ -374,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +517,7 @@
       "   |      |   line-default         letters, terminator\n",
       "   |      |   line-term            terminator\n",
       "   |      |   text-orig-full       letters, punc\n",
-      "   |     0.00s OK\n",
+      "   |     0.01s OK\n",
       "   |     0.00s Following director... \n",
       "\n",
       "INFORMATION: {'sentence', 'chapter', 'book'} \n",
@@ -548,9 +536,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |    1m 01s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |    1m 01s      2 unlinked nodes\n",
-      "   |      |    1m 01s Leaving    117 nodes\n",
+      "   |      |     0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |     0.00s      2 unlinked nodes\n",
+      "   |      |     0.00s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -563,13 +551,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |    1m 01s node feature \"author\" with 1 node\n",
-      "   |      |    1m 01s node feature \"gap\" with 7 nodes\n",
-      "   |      |    1m 01s node feature \"letters\" with 99 nodes\n",
-      "   |      |    1m 01s node feature \"number\" with 17 nodes\n",
-      "   |      |    1m 01s node feature \"punc\" with 17 nodes\n",
-      "   |      |    1m 01s node feature \"terminator\" with 12 nodes\n",
-      "   |      |    1m 01s node feature \"title\" with 1 node\n",
+      "   |      |     0.01s node feature \"author\" with 1 node\n",
+      "   |      |     0.01s node feature \"gap\" with 7 nodes\n",
+      "   |      |     0.01s node feature \"letters\" with 99 nodes\n",
+      "   |      |     0.01s node feature \"number\" with 17 nodes\n",
+      "   |      |     0.01s node feature \"punc\" with 17 nodes\n",
+      "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
+      "   |      |     0.01s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -587,7 +575,7 @@
       "   |     0.00s T title                to /Users/dirk/github/annotation/banks/tf/0.2\n",
       "   |     0.00s T oslots               to /Users/dirk/github/annotation/banks/tf/0.2\n",
       "   |     0.00s M otext                to /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "  0.02s Exported 8 node features and 1 edge features and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2\n"
+      "  0.05s Exported 8 node features and 1 edge features and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2\n"
      ]
     },
     {
@@ -596,7 +584,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +632,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-13T10:20:06Z\n",
+      "@dateWritten=2019-06-03T07:30:41Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -669,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +680,7 @@
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-13T10:20:06Z\n",
+      "@dateWritten=2019-06-03T07:30:41Z\n",
       "\n",
       "\n"
      ]
@@ -712,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +717,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-13T10:20:06Z\n",
+      "@dateWritten=2019-06-03T07:30:41Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -779,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +785,7 @@
       "@valueType=int\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-13T10:20:06Z\n",
+      "@dateWritten=2019-06-03T07:30:41Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -850,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +856,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-13T10:20:06Z\n",
+      "@dateWritten=2019-06-03T07:30:41Z\n",
       "\n",
       "Everything\n",
       "about\n",
@@ -996,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1003,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-05-13T10:20:06Z\n",
+      "@dateWritten=2019-06-03T07:30:41Z\n",
       "\n",
       "3\t,\n",
       "6\t,\n",
@@ -1100,5 +1088,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
