--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,22 +130,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we initialize the conversion machinery: we obtain an object with methods."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = CV(TF)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## TF configuration\n",
     "\n",
     "A Text-Fabric dataset is a bunch of individual `.tf` files that start with a little bit of metadata and then contain \n",
@@ -164,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +338,7 @@
     "    in the sense that it will be linked to subsequent slot nodes, before it is terminated,\n",
     "    or after it has been resumed;\n",
     "* If a fatal error is encountered, the director can simply say `cv.stop(message)`;\n",
+    "  the director is responsible for returning control after issuing a `cv.stop)`;\n",
     "* If the actions involve section nodes, it will be checked whether all slots occur in a section,\n",
     "  and whether big sections such as books will not start, end, or terminate inside small sections such\n",
     "  as verses. Warnings will be issued, but you can suppress them;\n",
@@ -362,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +364,7 @@
     "\n",
     "  wordRe = re.compile(r'^(.*?)([^A-Za-z0-9]*)$')\n",
     "  metaRe = re.compile(r'^\\$\\s*([^= ]+)\\s*=\\s*(.*)')\n",
-    "\n",
+    "  \n",
     "  for line in source.strip().split('\\n'):\n",
     "    line = line.rstrip()\n",
     "    if not line:\n",
@@ -499,8 +484,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we initialize the conversion machinery: we obtain an object with methods."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +528,7 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |     0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |    -0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
       "   |      |     0.00s      2 unlinked nodes\n",
       "   |      |     0.00s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
@@ -567,9 +559,9 @@
       "  0.00s OK: oslots is valid\n",
       "   |     0.00s T author               to /Users/dirk/github/annotation/banks/tf/0.2\n",
       "   |     0.00s T gap                  to /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T letters              to /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T number               to /Users/dirk/github/annotation/banks/tf/0.2\n",
-      "   |     0.00s T otype                to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.01s T letters              to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.01s T number               to /Users/dirk/github/annotation/banks/tf/0.2\n",
+      "   |     0.01s T otype                to /Users/dirk/github/annotation/banks/tf/0.2\n",
       "   |     0.00s T punc                 to /Users/dirk/github/annotation/banks/tf/0.2\n",
       "   |     0.00s T terminator           to /Users/dirk/github/annotation/banks/tf/0.2\n",
       "   |     0.00s T title                to /Users/dirk/github/annotation/banks/tf/0.2\n",
@@ -584,12 +576,14 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "cv = CV(TF)\n",
+    "\n",
     "good = cv.walk(\n",
     "    director,\n",
     "    slotType,\n",
@@ -615,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +626,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-06-03T07:30:41Z\n",
+      "@dateWritten=2020-02-13T06:46:28Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -657,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +674,7 @@
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-06-03T07:30:41Z\n",
+      "@dateWritten=2020-02-13T06:46:28Z\n",
       "\n",
       "\n"
      ]
@@ -700,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +711,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-06-03T07:30:41Z\n",
+      "@dateWritten=2020-02-13T06:46:28Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -767,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +779,7 @@
       "@valueType=int\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-06-03T07:30:41Z\n",
+      "@dateWritten=2020-02-13T06:46:28Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -838,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +850,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-06-03T07:30:41Z\n",
+      "@dateWritten=2020-02-13T06:46:28Z\n",
       "\n",
       "Everything\n",
       "about\n",
@@ -984,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +997,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-06-03T07:30:41Z\n",
+      "@dateWritten=2020-02-13T06:46:28Z\n",
       "\n",
       "3\t,\n",
       "6\t,\n",
