docs spell check

--- a/tutorial/compose.ipynb
+++ b/tutorial/compose.ipynb
@@ -589,9 +589,9 @@
     "2. **delete features**: several features are be deleted\n",
     "3. **add features**: several node/edge features with their data are added to the dataset\n",
     "4. **merge types**: several input node types are combined into a single output node type;\n",
-    "   the input nodetypes are deleted, but not their nodes: they are now part of the output node type;\n",
+    "   the input node types are deleted, but not their nodes: they are now part of the output node type;\n",
     "5. **delete types**: several node types are deleted, *with their nodes*, and all features\n",
-    "   will be remapped to accomodate for this;\n",
+    "   will be remapped to accommodate for this;\n",
     "6. **add types**: several new node types with additional feature data for them are added after the last node;\n",
     "   features do not have to be remapped for this; the new node types may be arbitrary intervals of integers and\n",
     "   have no relationship with the existing nodes.\n",
@@ -1579,7 +1579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We expect a severy reduced inventory of node types:"
+    "We expect a severely reduced inventory of node types:"
    ]
   },
   {
