--- a/tutorial/repo.ipynb
+++ b/tutorial/repo.ipynb
@@ -156,7 +156,7 @@
     "You can test your data, even without locally committing your data.\n",
     "\n",
     "But, if you are ready to share your data, everything is in place, and you only\n",
-    "have to commit and push, and pass the location on github to others, like\n",
+    "have to commit and push, and pass the location on GitHub to others, like\n",
     "\n",
     "```\n",
     "myorg/myrepo/subfolder\n",
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We show what happens if you do not have a local github clone in `~/github`."
+    "We show what happens if you do not have a local GitHub clone in `~/github`."
    ]
   },
   {
@@ -1341,13 +1341,13 @@
     "incorrectly_encoded_metadata": "toc-hr-collapsed=false"
    },
    "source": [
-    "## *source* and *dest*: an alternative for `~/github` and `~/text-fabric-data`\n",
+    "## `source` and `dest`: an alternative for `~/github` and `~/text-fabric-data`\n",
     "\n",
     "Everything so far uses the hard-wired `~/github` and `~/text-fabric-data` directories.\n",
     "But you can change that:\n",
     "\n",
-    "* pass *source* as a replacement for `~/github`.\n",
-    "* pass *dest* as a replacement for `~/text-fabric-data`.\n",
+    "* pass `source` as a replacement for `~/github`.\n",
+    "* pass `dest` as a replacement for `~/text-fabric-data`.\n",
     "\n",
     "**When to use**\n",
     "\n",
@@ -1366,7 +1366,7 @@
     "\n",
     "> if you work with cloned data outside your `~/github` directory,\n",
     "\n",
-    "you can let the system look in *source* instead of `~/github`."
+    "you can let the system look in `source` instead of `~/github`."
    ]
   },
   {
@@ -1513,7 +1513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We copy the local github data to the custom location:"
+    "We copy the local GitHub data to the custom location:"
    ]
   },
   {
@@ -1586,7 +1586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the directory trees under the customised *source* and *dest* locations have exactly the same shape as before."
+    "Note that the directory trees under the customised `source` and `dest` locations have exactly the same shape as before."
    ]
   },
   {
