--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -191,7 +191,7 @@
     "### Text matters\n",
     "\n",
     "A few things concerning the presentation of your text can be specified in the `otext` feature.\n",
-    "This is a tf feature without data, it has only metadata.\n",
+    "This is a TF feature without data, it has only metadata.\n",
     "\n",
     "It contains the specs for the section structure of your corpus and the text formats.\n",
     "\n",
@@ -604,7 +604,7 @@
     "\n",
     "Let's inspect some of the files:\n",
     "\n",
-    "### otype"
+    "### `otype`"
    ]
   },
   {
@@ -646,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### otext"
+    "### `otext`"
    ]
   },
   {
@@ -689,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### oslots"
+    "### `oslots`"
    ]
   },
   {
@@ -746,7 +746,7 @@
    "source": [
     "#### Explanation\n",
     "\n",
-    "* line `100\t1-99` tells that node 100 (the first book node, see *otext*, is linked to slots 1-99, which are all slots.\n",
+    "* line `100\t1-99` tells that node 100 (the first book node, see `otext`, is linked to slots 1-99, which are all slots.\n",
     "* the next line has only `1-55`. These are the slots of node 101, being 1 + the previous node.\n",
     "\n",
     "And so on."
@@ -817,7 +817,7 @@
     "\n",
     "The next line is about node 102, the second chapter, with number 2.\n",
     "\n",
-    "The following line refers to node 103, and a quick glance at the *otype* feature shows that this is a line.\n",
+    "The following line refers to node 103, and a quick glance at the `otype` feature shows that this is a line.\n",
     "\n",
     "The last three lines are about the three sentences, which are numbered within their chapter:\n",
     "`1` then `2` and then again `1`."
@@ -973,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### punc"
+    "### `punc`"
    ]
   },
   {
